Fix word-wrapped Stats button

--- a/web/app/static/css/claslite.css
+++ b/web/app/static/css/claslite.css
@@ -126,7 +126,7 @@ button.submit {
 }
 
 button.view-button {
-	width: 5.5em;
+	width: 6em;
 	text-align: left;
 }
 
